<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ClienteActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_cliente" />

    <LinearLayout
        android:id="@+id/linearLayotDestino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="74dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="8dp">

        <CheckBox
            android:id="@+id/checkLocal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:onClick="opcaoLocal"
            android:text="@string/utilizar_local_atual" />

        <EditText

            android:id="@+id/meuLocal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/white"
            android:drawableStart="@drawable/circulo_verde"
            android:drawableLeft="@drawable/circulo_verde"
            android:drawablePadding="6dp"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/meu_local"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="18sp"
            android:visibility="gone"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/localDestino"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/white"
            android:drawableStart="@drawable/circulo_verde"
            android:drawableLeft="@drawable/circulo_verde"
            android:drawablePadding="6dp"
            android:drawableTint="@android:color/darker_gray"
            android:ems="10"
            android:hint="@string/digite_seu_destino"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="18sp"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/servico"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/white"
            android:drawableStart="@drawable/exemplo_encanador"
            android:drawableLeft="@drawable/exemplo_encanador"
            android:drawablePadding="6dp"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/servico_exemplo"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="18sp"
            tools:targetApi="o" />
    </LinearLayout>

    <Button
        android:id="@+id/btnChamarPrestador"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:onClick="chamarPrestador"
        android:text="@string/chamar_prestador"
        android:theme="@style/botaoPadrao" />


</android.support.design.widget.CoordinatorLayout>